Se cambiaron las rutas. Actualizar documentacion y un archivo dockerfile
